workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/PerguntaQuestionario__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o questionário e a pergunta</description>
    <label>Pergunta do questionário de risco</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número da pergunta do questionário</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perguntas do questionário de risco</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>