workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/justificarPergunta__c.field-meta.xml
<CustomField>
    <fullName>justificarPergunta__c</fullName>
    <label>Justificar quando a resposta for</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>