workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Ordenação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>