workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/Obrigatorio__c.field-meta.xml
<CustomField>
    <fullName>Obrigatorio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a pergunta deve ser respondida obrigatoriamente</description>
    <label>Obrigatório</label>
    <type>Checkbox</type>
</CustomField>