workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/OpcesLista__c.field-meta.xml
<CustomField>
    <fullName>OpcesLista__c</fullName>
    <formula>Pergunta__r.OpcoesResposta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opções da lista</label>
    <type>Text</type>
</CustomField>