workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/Pergunta__c.field-meta.xml
<CustomField>
    <fullName>Pergunta__c</fullName>
    <label>Pergunta</label>
    <referenceTo>Pergunta__c</referenceTo>
    <relationshipLabel>Perguntas do questionário</relationshipLabel>
    <relationshipName>PerguntasQuestionario</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>