workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/PerguntaResumida__c.field-meta.xml
<CustomField>
    <fullName>PerguntaResumida__c</fullName>
    <formula>Pergunta__r.PerguntaResumida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pergunta Resumida</label>
    <type>Text</type>
</CustomField>