workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/PerguntasOpcao__c.field-meta.xml
<CustomField>
    <fullName>PerguntasOpcao__c</fullName>
    <label>Perguntas por opção</label>
    <type>TextArea</type>
</CustomField>