workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/ProximaPergunta__c.field-meta.xml
<CustomField>
    <fullName>ProximaPergunta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Próxima pergunta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Questionario__c</field>
            <operation>equals</operation>
            <valueField>PerguntaQuestionario__c.Questionario__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PerguntaQuestionario__c</referenceTo>
    <relationshipName>PerguntasQuestionario</relationshipName>
    <type>Lookup</type>
</CustomField>