workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/Questionario__c.field-meta.xml
<CustomField>
    <fullName>Questionario__c</fullName>
    <label>Questionário de risco</label>
    <referenceTo>Questionario__c</referenceTo>
    <relationshipLabel>Perguntas do questionário</relationshipLabel>
    <relationshipName>PerguntasQuestionario</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>