workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/fields/TipoDadoResposta__c.field-meta.xml
<CustomField>
    <fullName>TipoDadoResposta__c</fullName>
    <formula>TEXT(Pergunta__r.TipoResposta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de dado da resposta</label>
    <type>Text</type>
</CustomField>