workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/validationRules/ValidarAssociarPergunta.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarAssociarPergunta</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(Questionario__r.Status__c, &apos;Em manutenção&apos;))</errorConditionFormula>
    <errorMessage>Este questionário não está em manutenção</errorMessage>
</ValidationRule>