workspace-sf/force-app/main/default/objects/PerguntaQuestionario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Questionario__c</columns>
    <columns>PerguntaResumida__c</columns>
    <columns>ProximaPergunta__c</columns>
    <columns>PerguntasOpcao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>